--- a/UserManage/pom.xml
+++ b/UserManage/pom.xml
@@ -94,5 +94,37 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        
+       <dependency>
+	      <groupId>org.hibernate</groupId>
+	      <artifactId>hibernate-ehcache</artifactId>
+	      <version>4.3.5.Final</version>
+	    </dependency>
+		
+		<dependency>
+		    <groupId>org.eclipse.persistence</groupId>
+		    <artifactId>javax.persistence</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.inject</groupId>
+		    <artifactId>javax.inject</artifactId>
+		    <version>1</version>
+		</dependency>
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 </project>
