--- a/UserManage/src/main/webapp/WEB-INF/web.xml
+++ b/UserManage/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
+	<display-name>UserManage</display-name>
 	
     <context-param>
     	<param-name>contextConfigLocation</param-name> 
@@ -29,7 +30,6 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 	
- 	
 	<filter>  
         <filter-name>CharacterEncodingFilter</filter-name>  
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
@@ -41,7 +41,8 @@
             <param-name>forceEncoding</param-name>  
             <param-value>true</param-value>  
         </init-param>  
-    </filter>  
+    </filter> 
+     
     <filter-mapping>  
         <filter-name>CharacterEncodingFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
