--- a/UserManage/.classpath
+++ b/UserManage/.classpath
@@ -33,10 +33,8 @@
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/aspectjweaver.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/commons-io-1.3.2.jar"/>
-	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/ehcache-1.2.4.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/freemarker-2.3.16.jar"/>
@@ -76,5 +74,6 @@
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/spring-webmvc-portlet-3.2.0.M1.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/xwork-core-2.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/GITRepository/UserManage/src/main/webapp/WEB-INF/lib/json-lib-2.3-jdk15.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
