--- a/UserManage/pom.xml
+++ b/UserManage/pom.xml
@@ -156,6 +156,11 @@
 		    <artifactId>commons-logging</artifactId>
 		    <version>1.2</version>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
     </dependencies>
 </project>
