--- a/UserManage/src/main/webapp/WEB-INF/db.properties
+++ b/UserManage/src/main/webapp/WEB-INF/db.properties
@@ -1,4 +1,4 @@
 jdbc.user=root
 jdbc.password=root
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:2808/usermanage?characterEncoding=UTF-8
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8
